force-app/main/default/objects/Lead/fields/Lead_Path__c.field-meta.xml
<CustomField>
    <fullName>Lead_Path__c</fullName>
    <label>Lead Path</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Receive Referral</fullName>
            </value>
            <value>
                <fullName>Pre-Qualify Customer(s)</fullName>
                <default>true</default>
                <label>Pre-Qualify Customer(s)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>