force-app/main/default/objects/Lead/fields/Lead_Title__c.field-meta.xml
<CustomField>
    <fullName>Lead_Title__c</fullName>
    <label>Lead Title</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Title</valueSetName>
    </valueSet>
</CustomField>