force-app/main/default/objects/Lead/fields/leadScoring__Lead_Priority__c.field-meta.xml
<CustomField>
    <fullName>leadScoring__Lead_Priority__c</fullName>
    <formula
  >if( leadScoring__Total_Lead_Score__c &lt;30,&quot;C&quot;,if(leadScoring__Total_Lead_Score__c &lt;50, &quot;B&quot;, &quot;A&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Priority</label>
    <type>Text</type>
</CustomField>