force-app/main/default/objects/Lead/fields/leadScoring__Lead_Score__c.field-meta.xml
<CustomField>
    <fullName>leadScoring__Lead_Score__c</fullName>
    <label>Lead Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>