force-app/main/default/objects/Lead/fields/Length_of_Trade__c.field-meta.xml
<CustomField>
    <fullName>Length_of_Trade__c</fullName>
    <label>Length of Trade</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>&lt; 1 Year</fullName>
            </value>
            <value>
                <fullName>1 - 3 Years</fullName>
            </value>
            <value>
                <fullName>3 - 5 Years</fullName>
            </value>
            <value>
                <fullName>&gt; 5 Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>