force-app/main/default/objects/Lead/fields/Loan_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Loan_Purpose__c</fullName>
    <description>Unsecured Loan Form</description>
    <label>Loan Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Loan_Purpose_Unsecured</valueSetName>
    </valueSet>
</CustomField>