force-app/main/default/objects/Lead/fields/Loan_Purpose_UL__c.field-meta.xml
<CustomField>
    <fullName>Loan_Purpose_UL__c</fullName>
    <label>Loan Purpose (UL)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Loan_Purpose_Unsecured</valueSetName>
    </valueSet>
</CustomField>