force-app/main/default/objects/Lead/fields/Mailing_Address_Type__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address_Type__c</fullName>
    <label>Mailing Address Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Physical</fullName>
            </value>
            <value>
                <fullName>Residential</fullName>
                <isActive>false</isActive>
                <label>Residential</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>