force-app/main/default/objects/Lead/fields/Mailing_City_Town__c.field-meta.xml
<CustomField>
    <fullName>Mailing_City_Town__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Mailing City Town</label>
    <length>40</length>
    <type>Text</type>
</CustomField>