force-app/main/default/objects/Lead/fields/Mailing_Residential_Area_District__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Residential_Area_District__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mailing Residential Area/District</label>
    <length>40</length>
    <type>Text</type>
</CustomField>