force-app/main/default/objects/Lead/fields/Mailing_Status_of_Address__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Status_of_Address__c</fullName>
    <label>Mailing Status of Address</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Own (with mortgage)</fullName>
            </value>
            <value>
                <fullName>Own (without mortgage)</fullName>
            </value>
            <value>
                <fullName>Company</fullName>
            </value>
            <value>
                <fullName>Family</fullName>
            </value>
            <value>
                <fullName>Rent</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>