force-app/main/default/objects/Lead/fields/Mailing_Street_2__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Street_2__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Mailing Address Street 2</label>
    <length>40</length>
    <type>Text</type>
</CustomField>