force-app/main/default/objects/Lead/fields/Mailing_Years_at_Residence__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Years_at_Residence__c</fullName>
    <label>Mailing Years at Residence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>