force-app/main/default/objects/Lead/fields/Make_Customer_Contact_Date_Time_text__c.field-meta.xml
<CustomField>
    <fullName>Make_Customer_Contact_Date_Time_text__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Make Customer Contact (Date/Time)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>