force-app/main/default/objects/Lead/fields/Mortgage_Lead_Path_PK__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Lead_Path_PK__c</fullName>
    <label>Mortgage Lead Path</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Receive Referral</fullName>
            </value>
            <value>
                <fullName>Lead Analysis</fullName>
            </value>
            <value>
                <fullName>Loan Pre-Qualification</fullName>
            </value>
            <value>
                <fullName>Pre-Approval</fullName>
            </value>
            <value>
                <fullName>Close Lead</fullName>
                <isActive>false</isActive>
                <label>Close Lead</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>