force-app/main/default/objects/Lead/fields/Name_of_Current_Employer__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Current_Employer__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Name of Current Employer</label>
    <length>40</length>
    <type>Text</type>
</CustomField>