force-app/main/default/objects/Lead/fields/Name_of_Previous_Employer__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Previous_Employer__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Previous Employer Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>