force-app/main/default/objects/Lead/fields/Notes_Portal__c.field-meta.xml
<CustomField>
    <fullName>Notes_Portal__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Notes Portal</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>