force-app/main/default/objects/Lead/fields/Number_of_Loans_Scenerios_Run__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Loans_Scenerios_Run__c</fullName>
    <label>Number Of Loans Scenarios  Run</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>