force-app/main/default/objects/Lead/fields/Occupation__c.field-meta.xml
<CustomField>
    <fullName>Occupation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Occupation</label>
    <length>50</length>
    <type>Text</type>
</CustomField>