force-app/main/default/objects/Lead/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Leads and Referrals</relationshipLabel>
    <relationshipName>Leads_and_Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>