force-app/main/default/objects/Lead/fields/Other_Number__c.field-meta.xml
<CustomField>
    <fullName>Other_Number__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Other Number</label>
    <type>Phone</type>
</CustomField>