force-app/main/default/objects/Lead/fields/Other_Salutation__c.field-meta.xml
<CustomField>
    <fullName>Other_Salutation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Salutation</label>
    <length>30</length>
    <type>Text</type>
</CustomField>