force-app/main/default/objects/Lead/fields/Political_Exposure__c.field-meta.xml
<CustomField>
    <fullName>Political_Exposure__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Do you or any member of your immediate family currently hold or have ever held a prominent public function (whether in Jamaica or any foreign county), such as Head of State, Head of Opposition Political Party, Senior Member of the Judiciary, Head of Military or Police Force, CEO of Statutory Body/ Government Body or Agency or are you a personal/professional associate of any of the foregoing public officials?*</description>
    <label>Political Exposure</label>
    <type>Checkbox</type>
</CustomField>