force-app/main/default/objects/Lead/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Position</label>
    <length>40</length>
    <type>Text</type>
</CustomField>