force-app/main/default/objects/Lead/fields/Preferred_Date_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Date_of_Contact__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Preferred Date of Contact</label>
    <type>Date</type>
</CustomField>