force-app/main/default/objects/Lead/fields/Preferred_Time_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Time_of_Contact__c</fullName>
    <label>Preferred Time of Contact</label>
    <type>Time</type>
</CustomField>