force-app/main/default/objects/Lead/fields/Previous_Employer_City__c.field-meta.xml
<CustomField>
    <fullName>Previous_Employer_City__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Previous Employer City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>