force-app/main/default/objects/Lead/fields/Previous_Employer_City_Town__c.field-meta.xml
<CustomField>
    <fullName>Previous_Employer_City_Town__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Previous Employer City/Town</label>
    <length>40</length>
    <type>Text</type>
</CustomField>