force-app/main/default/objects/Lead/fields/Previous_Employer_Country__c.field-meta.xml
<CustomField>
    <fullName>Previous_Employer_Country__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Previous Employer Country</label>
    <length>40</length>
    <type>Text</type>
</CustomField>