force-app/main/default/objects/Lead/fields/Previous_Employer_Parish_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Previous_Employer_Parish_State_Province__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Previous Employer Parish/State/Province</label>
    <length>40</length>
    <type>Text</type>
</CustomField>