force-app/main/default/objects/Lead/fields/Previous_Employer_Phone_2__c.field-meta.xml
<CustomField>
    <fullName>Previous_Employer_Phone_2__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Previous Employer Phone 2</label>
    <type>Phone</type>
</CustomField>