force-app/main/default/objects/Lead/fields/Previous_Employer_Post_Office_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Previous_Employer_Post_Office_Zip_Code__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Previous Employer Post Office/Zip Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>