force-app/main/default/objects/Lead/fields/Previous_Employer_Street_1__c.field-meta.xml
<CustomField>
    <fullName>Previous_Employer_Street_1__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Previous Employer Street  1</label>
    <length>40</length>
    <type>Text</type>
</CustomField>