force-app/main/default/objects/Lead/fields/Previous_Employment_Area_District__c.field-meta.xml
<CustomField>
    <fullName>Previous_Employment_Area_District__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Previous Employment Area/District</label>
    <length>40</length>
    <type>Text</type>
</CustomField>