force-app/main/default/objects/Lead/fields/Proposed_Card_Limit__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Card_Limit__c</fullName>
    <label>Proposed Card Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>