force-app/main/default/objects/Lead/fields/Realtor_Name__c.field-meta.xml
<CustomField>
    <fullName>Realtor_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Realtor Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>