force-app/main/default/objects/Lead/fields/relationship_to_applicant__c.field-meta.xml
<CustomField>
    <fullName>relationship_to_applicant__c</fullName>
    <label>relationship to applicant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Familial_Relationship</valueSetName>
    </valueSet>
</CustomField>