force-app/main/default/objects/Lead/fields/Request_Sanction_Screening_from_pk__c.field-meta.xml
<CustomField>
    <fullName>Request_Sanction_Screening_from_pk__c</fullName>
    <inlineHelpText>Request Sanction Screening from Compliance</inlineHelpText>
    <label>Request Sanction Screening</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>