force-app/main/default/objects/Lead/fields/Residential_Status_del__c.field-meta.xml
<CustomField>
    <fullName>Residential_Status_del__c</fullName>
    <label>Residential Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Residential_Status</valueSetName>
    </valueSet>
</CustomField>