force-app/main/default/objects/Lead/fields/Review_Sales_Person_Document_Checklist__c.field-meta.xml
<CustomField>
    <fullName>Review_Sales_Person_Document_Checklist__c</fullName>
    <label>Review Sales Person Document Checklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>