force-app/main/default/objects/Lead/fields/RIM_Number__c.field-meta.xml
<CustomField>
    <fullName>RIM_Number__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>RIM Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>