force-app/main/default/objects/Lead/fields/role__c.field-meta.xml
<CustomField>
    <fullName>role__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>role</label>
    <length>50</length>
    <type>Text</type>
</CustomField>