force-app/main/default/objects/Lead/fields/Run_Loan_Scenario_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Run_Loan_Scenario_Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Run Loan Scenario (Date/Time)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>