force-app/main/default/objects/Lead/fields/Run_Loan_Scenarios__c.field-meta.xml
<CustomField>
    <fullName>Run_Loan_Scenarios__c</fullName>
    <formula>IF(ISBLANK(Number_of_Loans_Scenerios_Run__c) || Number_of_Loans_Scenerios_Run__c = 0, 


&#39;Not Started&#39; , 


 IF( 

AND( Number_of_Loans_Scenerios_Run__c &gt; 0,
 NOT(
OR(
ISPICKVAL( Status , &#39;Qualified&#39;),
ISPICKVAL( Status , &#39;Disqualified&#39;)
)
)

)
,

&#39;In Progress&#39;
,

 IF( 

AND( Number_of_Loans_Scenerios_Run__c &gt; 0,
OR(
ISPICKVAL( Status , &#39;Qualified&#39;),
ISPICKVAL( Status , &#39;Disqualified&#39;)
)
)
,

&#39;Completed&#39;



, 


&#39;Error&#39;)))</formula>
    <label>Run Loan Scenarios</label>
    <type>Text</type>
</CustomField>