force-app/main/default/objects/Lead/fields/Run_Loan_Scenarios_PK__c.field-meta.xml
<CustomField>
    <fullName>Run_Loan_Scenarios_PK__c</fullName>
    <label>Run Loan Scenarios</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>