force-app/main/default/objects/Lead/fields/Self_Employed_Address_Status_PK__c.field-meta.xml
<CustomField>
    <fullName>Self_Employed_Address_Status_PK__c</fullName>
    <label>Self-Employed Address Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Address_Status</valueSetName>
    </valueSet>
</CustomField>