force-app/main/default/objects/Lead/fields/Self_Employed_Area_District__c.field-meta.xml
<CustomField>
    <fullName>Self_Employed_Area_District__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Self Employed Area/District</label>
    <length>40</length>
    <type>Text</type>
</CustomField>