force-app/main/default/objects/Lead/fields/Self_Employed_City_Town__c.field-meta.xml
<CustomField>
    <fullName>Self_Employed_City_Town__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Self Employed City/Town</label>
    <length>40</length>
    <type>Text</type>
</CustomField>