force-app/main/default/objects/Lead/fields/Self_Employed_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Self_Employed_Company_Name__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Self Employed Company Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>