force-app/main/default/objects/Lead/fields/Self_Employed_Industry__c.field-meta.xml
<CustomField>
    <fullName>Self_Employed_Industry__c</fullName>
    <label>Self Employed Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Industry_Category_IFRS_Self_Employed</valueSetName>
    </valueSet>
</CustomField>