force-app/main/default/objects/Lead/fields/Self_Employed_Phone_1__c.field-meta.xml
<CustomField>
    <fullName>Self_Employed_Phone_1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Self Employed Phone 1</label>
    <type>Phone</type>
</CustomField>