force-app/main/default/objects/Lead/fields/Self_Employed_Post_Office_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Self_Employed_Post_Office_Zip_Code__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Self Employed Post Office/Zip Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>