force-app/main/default/objects/Lead/fields/Self_Employed_Province_Parish_State__c.field-meta.xml
<CustomField>
    <fullName>Self_Employed_Province_Parish_State__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Self Employed Province/Parish/State</label>
    <length>40</length>
    <type>Text</type>
</CustomField>