force-app/main/default/objects/Lead/fields/Self_Employed_Street_3__c.field-meta.xml
<CustomField>
    <fullName>Self_Employed_Street_3__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Self Employed Street 3</label>
    <length>40</length>
    <type>Text</type>
</CustomField>