force-app/main/default/objects/Lead/fields/Self_Employed_Time_in_Present_Industry__c.field-meta.xml
<CustomField>
    <fullName>Self_Employed_Time_in_Present_Industry__c</fullName>
    <label>Self Employed Time in Present Industry</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>