force-app/main/default/objects/Lead/fields/Service_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Service_of_Interest__c</fullName>
    <label>Product of Interest</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Group_of_Interest</valueSetName>
    </valueSet>
</CustomField>