force-app/main/default/objects/Lead/fields/SLA_Violation__c.field-meta.xml
<CustomField>
    <fullName>SLA_Violation__c</fullName>
    <label>SLA Violation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1 - 24 Hours</fullName>
            </value>
            <value>
                <fullName>Tier 1 - 36 hours</fullName>
            </value>
            <value>
                <fullName>Tier 2 - 24 Hours</fullName>
            </value>
            <value>
                <fullName>Tier 2 - 36 hours</fullName>
            </value>
            <value>
                <fullName>5 Days old</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>