force-app/main/default/objects/Lead/fields/Source_of_Funds__c.field-meta.xml
<CustomField>
    <fullName>Source_of_Funds__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Source of Funds</label>
    <length>40</length>
    <type>Text</type>
</CustomField>