force-app/main/default/objects/Lead/fields/Source_of_Submission__c.field-meta.xml
<CustomField>
    <fullName>Source_of_Submission__c</fullName>
    <label>Source of Submission</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
                <default>true</default>
                <label>Salesforce</label>
            </value>
            <value>
                <fullName>Lead Portal</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Webform</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>